--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
-<!DOCTYPE html>
+
+  
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A company which offers 100% ayurvedic medicine made with pure jaributi and using herbs that are useful in many various disease like Arthrithis , babasir,digestion , lack of hunger , skin related problems ">
-    <title>Licef-Healthcare</title>
+    <title>Healthcare Product Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <li>a</li>
-    </nav>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="hero">
+        <h1>Welcome to Our Ayurvedic Healthcare Products</h1>
+        <p>Discover the natural way to health and wellness</p>
+        <button id="learnMore">Learn More</button>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
